# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "docker-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
reqwest = { version = "0.11.22", features = ["json", "blocking"] } # http requests
bytes = "1.5.0"                                                    # helps wrap responses from reqwest
tokio = { version = "1.33.0", features = ["full"] }                # async http requests
libc = "0.2.149"                                                   # for syscalls like chroot
serde = { version = "1.0.190", features = ["derive"] }             # for json mangling
serde_json = "1.0.107"                                              # for json mangling
anyhow = "1.0.75"                                                  # error handling
thiserror = "1.0.50"                                               # error handling
tempfile = "3"                                                     # creating temporary directories
regex = "1"                                                        # for regular expressions
flate2 = "1.0.28"                                                  # for handling compressed data
tar = "0.4.40"
chumsky = "0.9.3"
once_cell = "1.18.0"
getset = "0.1.2"
async-compression = { version = "0.4.4", features = ["tokio", "gzip"] }
tokio-tar = "0.3.1"
clap = { version = "4.4.7", features = ["derive"] }
nix = { version = "0.27.1", features = ["mount"] }
fs_extra = "1.3.0"

[target.'cfg(target_os = "linux")'.dependencies]

[dev-dependencies]
serial_test = "2.0.0"

[[bin]]
name = "mydocker"
path = "src/main.rs"
